--- a/kubernetes/configuration/books-secrets.yaml
+++ b/kubernetes/configuration/books-secrets.yaml
@@ -5,6 +5,7 @@ metadata:
 data:
   username: 'dXNlcgo='
   password: 'cGFzc3dvcmQK'
+  postgresConnectionUrl: 'aG9zdD1wb3N0Z3JlcyBwb3J0PTU0MzIgZGJuYW1lPWJvb2tzIHVzZXI9dXNlciBwYXNzd29yZD1wYXNzd29yZCBzc2xtb2RlPWRpc2FibGUK'
 #stringData:
 #  usernameString: 'user'
 #  passwordString: 'password'
