--- a/kubernetes/application/deployment.yaml
+++ b/kubernetes/application/deployment.yaml
@@ -35,10 +35,10 @@ spec:
       containers:
         - image: books:1
           name: books
-#          volumeMounts:
-#            - mountPath: '/etc'
-#              name: books-secret
-#              readOnly: true
+          volumeMounts:
+            - mountPath: '/tmp'
+              name: books-secret
+              readOnly: true
           livenessProbe: # if fails - container will be restarted
             httpGet:
               port: http
@@ -61,8 +61,8 @@ spec:
               containerPort: 9090
 #          resources:
 #            limits:
-#              cpu: 500m
-#              memory: 1Gi
-#            requests:
-#              cpu: 500m
+#              cpu: 100m
 #              memory: 512Mi
+#            requests:
+#              cpu: 100m
+#              memory: 256Mi
