--- a/kubernetes/network/books-service-externalname.yaml
+++ b/kubernetes/network/books-service-externalname.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-service
+  name: books-service-external-name
 spec:
   type: ExternalName
-  externalName: my.database.example.com # service to reach external address
+  externalName: google.com # service to reach external address
