--- a/kubernetes/network/books-ingress.yaml
+++ b/kubernetes/network/books-ingress.yaml
@@ -2,12 +2,15 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: books-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
+  ingressClassName: nginx
   rules:
     - host: books.local
       http:
         paths:
-          - path: /
+          - path: /books-service(/|$)(.*)
             pathType: Prefix
             backend:
               service:
