--- a/kubernetes/network/books-ingress.yaml
+++ b/kubernetes/network/books-ingress.yaml
@@ -17,3 +17,10 @@ spec:
                 name: books-service
                 port:
                   number: 9090
+          - path: /nginx-service(/|$)(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: nginx-service
+                port:
+                  number: 80
