ingress host name corrected

--- a/kubernetes/network/books-ingress.yaml
+++ b/kubernetes/network/books-ingress.yaml
@@ -17,7 +17,7 @@ spec:
                 name: books-service
                 port:
                   number: 9090
-          - path: /nginx-service(/|$)(.*)
+          - path: /nginx-service
             pathType: Prefix
             backend:
               service:
