--- a/kubernetes/application/statefulset-nginx.yaml
+++ b/kubernetes/application/statefulset-nginx.yaml
@@ -29,7 +29,7 @@ spec:
         name: www
       spec:
         accessModes: [ "ReadWriteOnce" ]
-        storageClassName: "my-storage-class"
+        storageClassName: "nginx-storage"
         resources:
           requests:
             storage: 1Gi
