--- a/kubernetes/network/books-service-clusterip.yaml
+++ b/kubernetes/network/books-service-clusterip.yaml
@@ -1,19 +1,25 @@
+# Service - NAT (Network address translation https://en.wikipedia.org/wiki/Network_address_translation)
+# NAT mechanism - IPTables, IPVS (Preferable)
+# Rule: If request comes to ClusterIP on port 9090 -> redirect it to IP address of pod
+# Default balancing algorithm - RoundRobin
 apiVersion: v1
 kind: Service
 metadata:
   name: books-service
+  # namespace: applications
   labels:
     service: books-service
 spec:
-  type: ClusterIP
+  selector:
+    # using selector - entity Endpoint will be created automatically along with service
+    app: books # has to match .spec.template.metadata.labels in deployment.yaml file
+  type: ClusterIP # default service type
   ports:
     - port: 9090
       name: http
-      targetPort: http
+      targetPort: http # name of port in deployment.yaml
       protocol: TCP
 #    - port: 443
 #      protocol: TCP
 #      name: https
 #      targetPort: 9093
-  selector:
-    app: books # has to match .spec.template.metadata.labels in deployment.yaml file
