--- a/kubernetes/network/books-service-nodeport.yaml
+++ b/kubernetes/network/books-service-nodeport.yaml
@@ -1,3 +1,6 @@
+# Open on all nodes of cluster particular port for listening
+# default port range 30000-32767
+# config during cluster setup
 apiVersion: v1
 kind: Service
 metadata:
@@ -5,10 +8,10 @@ metadata:
   labels:
     service: books-nodeport
 spec:
+  selector:
+    app: books
   type: NodePort
   ports:
     - port: 9090
       targetPort: http
       nodePort: 30007
-  selector:
-    app: books
