--- a/kubernetes/network/books-service-nodeport.yaml
+++ b/kubernetes/network/books-service-nodeport.yaml
@@ -8,6 +8,7 @@ metadata:
   labels:
     service: books-nodeport
 spec:
+  # externalTrafficPolicy: Local # NAT working only in particular node where Pod and Service is located
   selector:
     app: books
   type: NodePort
