add info to README.md

--- a/kubernetes/configuration/books-secrets.yaml
+++ b/kubernetes/configuration/books-secrets.yaml
@@ -3,8 +3,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: books-secret
-data:
-  postgresConnectionUrl: 'aG9zdD1wb3N0Z3JlcyBwb3J0PTU0MzIgZGJuYW1lPWJvb2tzIHVzZXI9dXNlciBwYXNzd29yZD1wYXNzd29yZCBzc2xtb2RlPWRpc2FibGUK'
+stringData:
+  postgresConnectionUrl: 'host=postgres port=5432 dbname=books user=user password=password sslmode=disable'
 #stringData:
 #  usernameString: 'user'
 #  passwordString: 'password'
