--- a/kubernetes/configuration/books-secrets.yaml
+++ b/kubernetes/configuration/books-secrets.yaml
@@ -4,7 +4,8 @@ kind: Secret
 metadata:
   name: books-secret
 stringData:
-  postgresConnectionUrl: 'host=postgres port=5432 dbname=books user=user password=password sslmode=disable'
+  DB_USERNAME: "foo"
+  DB_PASSWORD: "bla"
 #stringData:
 #  usernameString: 'user'
 #  passwordString: 'password'
