--- a/kubernetes/application/deployment-with-network-config.yaml
+++ b/kubernetes/application/deployment-with-network-config.yaml
@@ -49,9 +49,9 @@ spec:
           name: books
           env:
             - name: APPLICATION_PORT
-              value: ':9090'
+              value: '8080'
             - name: APPLICATION_NAME
               value: 'books'
           ports:
             - name: http
-              containerPort: 9090
+              containerPort: 8080
