--- a/kubernetes/examples/demo/secrets.yaml
+++ b/kubernetes/examples/demo/secrets.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: books-secret
+  name: secret
 data:
   DB_USERNAME: Zm9vCg==
   DB_PASSWORD: YmxhCg==
