--- a/kubernetes/network/external-static-ip-access.yaml
+++ b/kubernetes/network/external-static-ip-access.yaml
@@ -1,3 +1,5 @@
+# endpoint name with service name should match
+# Service without selectors doesn't create Endpoint abstraction
 ---
 apiVersion: v1
 kind: Service
