--- a/kubernetes/network/external-ip.yaml
+++ b/kubernetes/network/external-ip.yaml
@@ -13,7 +13,7 @@ spec:
   ports:
     - name: http
       protocol: TCP
-      port: 9090
+      port: 8080
       targetPort: http
   externalIPs:
-    - 192.168.49.2
+    - 192.168.49.2 # IP address of cluster node
