more about volumes

--- a/kubernetes/examples/demo/configmap-file.yaml
+++ b/kubernetes/examples/demo/configmap-file.yaml
@@ -1,3 +1,4 @@
+# create configmap from console: kubectl create configmap <configmap-name> --from-file=./<filename>.<ext>
 apiVersion: v1
 kind: ConfigMap
 metadata:
