--- a/kubernetes/examples/demo/secrets.yaml
+++ b/kubernetes/examples/demo/secrets.yaml
@@ -1,4 +1,9 @@
 # do not store your secret GitHub, Gitlab etc.
+# Better use files as secret instead of literals (command history might be saved)
+# kubectl create secret generic <name> --from-literal=<key>=<value> (--from-file=<key>=<filename>)
+# kubectl create secret tls books-local-secret-tls --key server.key --cert server.crt
+# kubectl create secret docker-registry
+# (if you use private registry, and you don't want to expose creds you can store them in secret)
 apiVersion: v1
 kind: Secret
 metadata:
